
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manage.expensetracker.Home$PlaceholderFragment" >

    

    <Button
        android:id="@+id/expensebutton"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/expense" />

    <Button
        android:id="@+id/walletbutton"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/wallet" />

    <Button
        android:id="@+id/aboutus"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
         android:gravity="left|center_vertical"
        android:text="@string/Aboutus" />

</LinearLayout>
