
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495e"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manage.expensetracker.Expense$PlaceholderFragment" >

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="70dp"
        android:hint="@string/wallet"
        android:ems="10" /> 
         <requestFocus />
	
        <EditText
        android:id="@+id/editcurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:hint="@string/Currency"
        android:ems="10" />
        
         


    <ImageButton
        android:id="@+id/addwallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@null"
       	android:layout_gravity="center"
         android:src="@drawable/add"
        />

</LinearLayout>
