<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#34495e"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manage.expensetracker.Expense$PlaceholderFragment" >

    <TextView
         android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:text="@string/updateexpense"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <EditText
        android:id="@+id/expensename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:hint="@string/expensename"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/expenseamt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/enteramount"
        android:inputType="number" />

   
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="20dp">
    <ImageButton
        android:id="@+id/updateexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
          android:background="@null"
       
         android:src="@drawable/update"
         />
    
    <ImageButton
        android:id="@+id/deleteexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="80dp"
          android:background="@null"
       
         android:src="@drawable/delete"
        />
    
    </LinearLayout>

</LinearLayout>
